Implementado layout para publicar anuncio
Se ha implmentado la interfaz para publicar un nuevo anuncio (post)

--- a/AppMovil/LuckyPets/app/src/main/res/values/strings.xml
+++ b/AppMovil/LuckyPets/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="show_card">Mis tarjetas</string>
     <string name="add_balance">Añadir Saldo CR</string>
     <string name="details_post">Detalles del anuncio</string>
+    <string name="new_post">Nuevo anuncio</string>
     <string-array name="card_types_array">
         <item>Visa</item>
         <item>MasterCard</item>
