--- a/AppMovil/LuckyPets2/app/src/main/res/values/strings.xml
+++ b/AppMovil/LuckyPets2/app/src/main/res/values/strings.xml
@@ -21,13 +21,14 @@
     <string name="add_card">Añadir tarjeta de débito / crédito</string>
     <string name="show_card">Mis tarjetas</string>
     <string name="add_balance">Añadir Saldo CR</string>
+    <string name="details_post">Detalles del anuncio</string>
+    <string name="new_post">Nuevo anuncio</string>
     <string-array name="card_types_array">
         <item>Visa</item>
         <item>MasterCard</item>
         <item>AmericanExpress</item>
         <item>Otros</item>
     </string-array>
-
 
 
 </resources>
