--- a/AppMovil/LuckyPets3/app/src/main/res/values/strings.xml
+++ b/AppMovil/LuckyPets3/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="register_new_user">¡Registro de un nuevo usuario!</string>
     <string name="reset_password">Restablezca su contraseña</string>
     <string name="latest_ads">Últimos anuncios</string>
+    <string name="my_posts">Mis anuncios</string>
+    <string name="my_reservations">Mis reservas</string>
     <string name="my_data">Mis datos</string>
     <string name="confirm_code_reset">Confirmar código de restablecimiento</string>
     <string name="set_new_password">Establecer nueva contraseña</string>">
