--- a/AppEscritorio/LuckyPets/Login.resx
+++ b/AppEscritorio/LuckyPets/Login.resx
@@ -996,8 +996,11 @@
         EwiYRMImETCJhF//2Q==
 </value>
   </data>
+  <metadata name="toolTipLogin.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>142, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>230</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
