--- a/AppEscritorio/LuckyPets/AddPost.resx
+++ b/AppEscritorio/LuckyPets/AddPost.resx
@@ -123,43 +123,45 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="pictureBoxAddPost.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAeZSURBVHhe7VxdbBRVGG14kUQefRBp968/lN0t5ae0WIGA
-        UEykLT8RjCBPqERLqxAsTaBgpEBUMDFGpKWtkBgMrfxUCrRSEAEhaFAeEAEjiQb0gZio8GLUXOfczl2G
-        y1faTndnZiffSU4mu92h53xn7/3uQPgyGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGg+F7ZGfHsgLh6IpA
-        OHbUuP4QDEfvBMMxkZ6M3oEHw8sR41o1Kqcg07TpfWRmFo4yTDQGQ9F/7jfmG/5nsC0UGhM0bXsTWaFo
-        ZSAU+wuiIzljxfwFS8WGDdtE88520d7WIz7rOJWWhHZ4gBd4gjd4hNescKzCtO8tBELRavObIyrnLhGt
-        LftJc35ga+s+6RFe4Rlbs1kGbwArA8JCkbioebWeNOFH1tSsE/AM755ZKegZapvSw/hkb5eoev0NMbWs
-        UuRFJ6pvlKdZPO0pcea33+/lzVvi5E83RM+FK6LzyFf3eEQouM+owZ+BQP5IsyzuwWjezRCEJWwVuund
-        RhEfVyqWr1kvdvecFsev37zfaBry9I1bouv0xXu8VtzdvhrNsrgDHG2NI+G/aHLWnoEwxpfMEHtOnSdN
-        +YHWUFpa9olwttHojZMldgyzPM4DzQzfDJw8lDhsU1gZfg4DxEo5dPhswve8eUvVKnnFLI/zwIMSROA4
-        qIShZ2Cbokz4jceMnqJ816/f2htIKNpplsd5GI3sGkQ0N3+aEDZ1VoXYffwMacBvRKNXvvGcgloYu8YV
-        szzOIxiK3YaI9vZjCWGjo0Wi5/oN0oDfiG1L+UYNeldI7LZZHuchBRhUokC8psT7lbp30CyP80j3QA58
-        e0kse221KCouFZHcAnldtnK1fJ/6PEXdOwdikx92HBXjJhaLbZtmix+/WSju/LJEXrc2zBaFE4qNn3eR
-        9+nUvXMgNnjgwiUZxvnP54u/f33+Pp4z3kcoB7/7nrzfSt07B2KD2KawMqgwFN8xVsoLq1aT91upe+dA
-        bBC9AtsTFYTiNePnRZOnkPdbqXvnQGwwO3es7BlUEIq3f14scvIKyfut1L1zIDZYVPJEvyvk6tcLxaTH
-        eYU4QhxtcZqiglB8eyN6SC15v5W6dw7EBvGcgVMUTlNUGGe7e09ZHRcvk/dbqXvnQGwSzxkoOk5TaODo
-        KbhiZfQ+h3ST91mJf8zSvXMgQyCeM3C0xWkKjR5XbFMDWRkg5R00y+M8lABdFCW+L3588pyYUvmsyB1b
-        Iq94TX3Oi/TdCtl5+LjILZwsRtStE8NaWuUVr/E+9XkvUveetoG0dH8hcoziD2/YLDL27EnwoS1vyfcb
-        O4+R93mNuve0DKSvMNItFF9sWf2FoZgOoVDeQbM8zkMJ0EVR4sGBhqHo9VAo76BZHuehBOiiKPHNXScG
-        FYail0OhvINmeZyHEqCL0oXbDUMxFaHgeD197iKRX1giZsxbZOu4nZY9ZKhhKCYzFByr88dNFjO21Im5
-        h3bIK17bOW7r3j0dSLLCUExGKOhjKH7Z9jfFghO7Epzd2CDfH+yfrXv3bCDJDkNxKKH0FYbdUNJmy0pV
-        GIp2QukvDMXBhEJ5B83yOA8lQBeVyjAUBxPKQMNQHGgolHfQLI/zUAJ0UcMbtpBFTDbxexDKg5rxYMNQ
-        HEgolHfQLI/zUAJ0UVTxUsUHrRS7YSj2FwrlXfp3C0qALooqXCpJhTLUMBQfFArlXfp3C0qALooqWqpp
-        DSVZYSj2FQrlXfp3C0qALooqmBNEKJGCYpFXMClpYShSoVDepX+3oATooqhiOUWEEowXJT0QUA+F8i79
-        uwUlQBdFFcpJylBSsEpAayiUd+nfLSgBuiiqSE7TiVAo79K/W1ACdFFUgdxgKkMp276RA7HDVIZCeZf+
-        3YISoIuiCuMmUxUK5V36dwtKgC6KKorbTEUolHfp3y0oAbooqiBeYLJDobxL/25BDZ2x/rfoYDguhjU1
-        kQXxApMVSsX+96VX5bttb7cMA0NozPI4D+OXX4WI5ub2hLDI6PFixKpashheIf6WOCRD2UgWeyCctmGV
-        yBkzIeF7Z1NicMBlszzOQ43WWG8ZrTHz6WdEZulMshBe4lBDGTNluigrX5TwXV/vhdEa4WgVRFiHz7R8
-        tF8EI3HxcN06shBeot1Qpm+ulR6bd+1L+E4Mn4nEXjbL4zwwnRMjieR4pta74l5csUZOWvNjKAgjnB0X
-        y1fUJfxi1osnxjMBxreiCd8MfYAZQsG3KLP0STFiZa2nG31/oZQf/ED2DGxT8PRS1d0wOg5+KcornjP7
-        R2yHWRb3kJU1+jF12sK4O2soWNKz5iwU2fkTRAjLOW0Zlw0cXqzbFFhds1Z+JhCK/hEMRh81y+IuMADS
-        ENU7BFMLxa/EyqiuXpsYghmIxOeY5fAGzOlyckwsZhBi7B1lxA9EzyivXKxWEMbEVpll8BaMPbQcD0YQ
-        iiaHkwcmreGMbn14TDdCe1NTmzzawpNs4OY25bmVoWNkXt4jwXD0PZw4zG+Q/9jrrdETY2EHCjkD3jiT
-        GyvmMJ5e1fS5tKShvddDtBOeXD/aMhgMBoPBYDAYDAaDwWAwGAwGg8FgMBgMBiP1yMj4H5ONt7LTyYKr
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAGQAAABkCAYAAABw4pVUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EAAACxABrSO9dQAAB5lJREFUeF7tXF1sFFUYbXiRRB59EGn3rz+U3S3lp7RYgYBQTKQtPxGMIE+oREur
+        ECxNoGCkQFQwMUakpa2QGAyt/FQKtFIQASFoUB4QASOJBvSBmKjwYtRc59zOXYbLV9pOd2dmJ99JTia7
+        3aHnfGfv/e5A+DIYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaD4XtkZ8eyAuHoikA4dtS4/hAMR+8EwzGR
+        nozegQfDyxHjWjUqpyDTtOl9ZGYWjjJMNAZD0X/uN+Yb/mewLRQaEzRtexNZoWhlIBT7C6IjOWPF/AVL
+        xYYN20TzznbR3tYjPus4lZaEdniAF3iCN3iE16xwrMK07y0EQtFq85sjKucuEa0t+0lzfmBr6z7pEV7h
+        GVuzWQZvACsDwkKRuKh5tZ404UfW1KwT8Azvnlkp6Blqm9LD+GRvl6h6/Q0xtaxS5EUnqm+Up1k87Slx
+        5rff7+XNW+LkTzdEz4UrovPIV/d4RCi4z6jBn4FA/kizLO7BaN7NEIQlbBW66d1GER9XKpavWS9295wW
+        x6/fvN9oGvL0jVui6/TFe7xW3N2+Gs2yuAMcbY0j4b9octaegTDGl8wQe06dJ035gdZQWlr2iXC20eiN
+        kyV2DLM8zgPNDN8MnDyUOGxTWBl+DgPESjl0+GzC97x5S9UqecUsj/PAgxJE4DiohKFnYJuiTPiNx4ye
+        onzXr9/aG0go2mmWx3kYjewaRDQ3f5oQNnVWhdh9/AxpwG9Eo1e+8ZyCWhi7xhWzPM4jGIrdhoj29mMJ
+        YaOjRaLn+g3SgN+IbUv5Rg16V0jstlke5yEFGFSiQLymxPuVunfQLI/zSPdADnx7SSx7bbUoKi4VkdwC
+        eV22crV8n/o8Rd07B2KTH3YcFeMmFottm2aLH79ZKO78skRetzbMFoUTio2fd5H36dS9cyA2eODCJRnG
+        +c/ni79/ff4+njPeRygHv/uevN9K3TsHYoPYprAyqDAU3zFWygurVpP3W6l750BsEL0C2xMVhOI14+dF
+        k6eQ91upe+dAbDA7d6zsGVQQird/Xixy8grJ+63UvXMgNlhU8kS/K+Tq1wvFpMd5hThCHG1xmqKCUHx7
+        I3pILXm/lbp3DsQG8ZyBUxROU1QYZ7t7T1kdFy+T91upe+dAbBLPGSg6TlNo4OgpuGJl9D6HdJP3WYl/
+        zNK9cyBDIJ4zcLTFaQqNHldsUwNZGSDlHTTL4zyUAF0UJb4vfnzynJhS+azIHVsir3hNfc6L9N0K2Xn4
+        uMgtnCxG1K0Tw1pa5RWv8T71eS9S9562gbR0fyFyjOIPb9gsMvbsSfChLW/J9xs7j5H3eY2697QMpK8w
+        0i0UX2xZ/YWhmA6hUN5BszzOQwnQRVHiwYGGoej1UCjvoFke56EE6KIo8c1dJwYVhqKXQ6G8g2Z5nIcS
+        oIvShdsNQzEVoeB4PX3uIpFfWCJmzFtk67idlj1kqGEoJjMUHKvzx00WM7bUibmHdsgrXts5buvePR1I
+        ssJQTEYo6GMoftn2N8WCE7sSnN3YIN8f7J+te/dsIMkOQ3EoofQVht1Q0mbLSlUYinZC6S8MxcGEQnkH
+        zfI4DyVAF5XKMBQHE8pAw1AcaCiUd9Asj/NQAnRRwxu2kEVMNvF7EMqDmvFgw1AcSCiUd9Asj/NQAnRR
+        VPFSxQetFLthKPYXCuVd+ncLSoAuiipcKkmFMtQwFB8UCuVd+ncLSoAuiipaqmkNJVlhKPYVCuVd+ncL
+        SoAuiiqYE0QokYJikVcwKWlhKFKhUN6lf7egBOiiqGI5RYQSjBclPRBQD4XyLv27BSVAF0UVyknKUFKw
+        SkBrKJR36d8tKAG6KKpITtOJUCjv0r9bUAJ0UVSB3GAqQynbvpEDscNUhkJ5l/7dghKgi6IK4yZTFQrl
+        Xfp3C0qALooqittMRSiUd+nfLSgBuiiqIF5gskOhvEv/bkENnbH+t+hgOC6GNTWRBfECkxVKxf73pVfl
+        u21vtwwDQ2jM8jgP45dfhYjm5vaEsMjo8WLEqlqyGF4h/pY4JEPZSBZ7IJy2YZXIGTMh4XtnU2JwwGWz
+        PM5DjdZYbxmtMfPpZ0Rm6UyyEF7iUEMZM2W6KCtflPBdX++F0RrhaBVEWIfPtHy0XwQjcfFw3TqyEF6i
+        3VCmb66VHpt37Uv4TgyficReNsvjPDCdEyOJ5Him1rviXlyxRk5a82MoCCOcHRfLV9Ql/GLWiyfGMwHG
+        t6IJ3wx9gBlCwbcos/RJMWJlracbfX+hlB/8QPYMbFPw9FLV3TA6Dn4pyiueM/tHbIdZFveQlTX6MXXa
+        wrg7ayhY0rPmLBTZ+RNECMs5bRmXDRxerNsUWF2zVn4mEIr+EQxGHzXL4i4wANIQ1TsEUwvFr8TKqK5e
+        mxiCGYjE55jl8AbM6XJyTCxmEGLsHWXED0TPKK9crFYQxsRWmWXwFow9tBwPRhCKJoeTByat4YxufXhM
+        N0J7U1ObPNrCk2zg5jbluZWhY2Re3iPBcPQ9nDjMb5D/2Out0RNjYQcKOQPeOJMbK+Ywnl7V9Lm0pKG9
+        10O0E55cP9oyGAwGg8FgMBgMBoPBYDAYDAaDwWAwGAwGI/XIyPgfk423stPJgqsAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="toolTipAddPost.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAQAEBAAAAEAIABoBAAARgAAACAgAAABACAAqBAAAK4EAAAwMAAAAQAgAKglAABWFQAAQEAAAAEA
